[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokey"
version = "0.7.6"
description = "Real-time per-prompt token cost for Claude Code."
requires-python = ">=3.11"
dependencies = ["rich>=13"]

[project.scripts]
tokey = "cc_token_tracker.roster:main"
tokey-hook = "cc_token_tracker.hook:main"

[project.optional-dependencies]
dev = ["ruff==0.15.17", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
