[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokey"
dynamic = ["version"]
description = "Real-time per-prompt token cost for Claude Code."
requires-python = ">=3.11"
dependencies = ["rich>=13"]

[project.scripts]
tokey = "cc_token_tracker.roster:main"
tokey-hook = "cc_token_tracker.hook:main"

[project.optional-dependencies]
dev = ["ruff==0.15.17", "pytest"]

[tool.setuptools.dynamic]
version = { attr = "cc_token_tracker.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
